# amplifier-app-openclaw

./: README.md  install.sh  pyproject.toml  scripts
docs/plans/: phase-2-plan.md
skill/: SKILL.md
skill/scripts/: amplifier-tool.sh  sidecar-manager.sh
src/amplifier_app_openclaw/: __init__.py  cli.py  context_router.py  cost.py  discovery.py  errors.py  governance.py  injection.py  llm_handler.py  openclaw_config.py  provider_routing.py  rpc.py  rpc_llm.py  runner.py  serve.py  session_manager.py  spawn.py
src/amplifier_app_openclaw/adapters/: approval.py  display.py  streaming.py
src/amplifier_app_openclaw/automation/: recipes.py
src/amplifier_app_openclaw/modules/: __init__.py  provider_openclaw.py  tool_openclaw.py
src/amplifier_app_openclaw/tools/: __init__.py  base.py  browser.py  cron.py  devices.py  memory.py  message.py
tests/: conftest.py  e2e_provider_openclaw.py  smoke_pi.sh  test_adapters.py  test_cli.py  test_context_router.py  test_cost.py  test_discovery.py  test_errors.py  test_governance.py  test_injection.py  test_module_tool_openclaw.py  test_persistence.py  test_provider_openclaw.py  test_provider_routing.py  test_rpc.py  test_runner.py  test_session_manager.py  test_sidecar_integration.py  test_spawn.py  test_tools_bridge.py
