[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-app-openclaw"
version = "0.1.0"
description = "Amplifier × OpenClaw integration CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core>=1.0.0",
    "amplifier-foundation>=1.0.0",
    "click>=8.0",
]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
amplifier-foundation = { git = "https://github.com/microsoft/amplifier-foundation", branch = "main" }

[project.scripts]
amplifier-openclaw = "amplifier_app_openclaw.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_app_openclaw"]
