[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-app-openclaw"
version = "0.1.0"
description = "Amplifier × OpenClaw integration CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core>=1.0.0",
    "amplifier-foundation>=1.0.0",
    "amplifier-module-context-persistent>=1.0.0",
    "amplifier-module-hooks-streaming-ui>=1.0.0",
    "amplifier-module-tool-mcp>=0.2.0",
    "amplifier-module-tool-web>=1.0.0",
    "click>=8.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
amplifier-foundation = { git = "https://github.com/microsoft/amplifier-foundation", branch = "main" }
amplifier-module-hooks-streaming-ui = { git = "https://github.com/microsoft/amplifier-module-hooks-streaming-ui", branch = "main" }
amplifier-module-context-persistent = { git = "https://github.com/microsoft/amplifier-module-context-persistent", branch = "main" }
amplifier-module-tool-mcp = { git = "https://github.com/microsoft/amplifier-module-tool-mcp", branch = "main" }
amplifier-module-tool-web = { git = "https://github.com/microsoft/amplifier-module-tool-web", branch = "main" }

[project.scripts]
amplifier-openclaw = "amplifier_app_openclaw.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end sidecar integration tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_app_openclaw"]
